# study_lab5

./: CMakeLists.txt  README.md  doxygen.conf
.github/workflows/: doxygen-gh-pages.yml  github-actions-demo.yml
inc/: controller.h  figure.h  model.h  view.h
src/: controller.cpp  figure.cpp  main.cpp  model.cpp  view.cpp
tests/: gtest.cpp
